<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="user1">Sung Jinwoo</string>
    <string name="user2">Cha Hae-in</string>
    <string name="user3">Thomas Andre</string>
    <string name="user4">Liu Zhigang</string>
    <string name="user5">Christopher Reed</string>
    <string name="user6">Go Gunhee</string>
    <string name="user7">Sung II-Hwan</string>
</resources>