<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clipart3576861" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="84dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView8"
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/screenshot_2024_02_22_121213"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView7"
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/screenshot_2024_02_22_121240"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView6"
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/screenshot_2024_02_22_121252"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView5"
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/screenshot_2024_02_22_121305"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView3"
                    android:layout_width="88dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/screenshot_2024_02_22_121318"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/user5" />

            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="166dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram_new_logo" />

    <ScrollView
        android:id="@+id/scrollViewPosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">


            <!-- User picture and name container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:layout_marginBottom="8dp">

                <!-- User picture -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewUser"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/screenshot_2024_02_22_121213"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop" />

                <!-- User's name -->
                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user1"
                    android:textSize="16sp"
                    android:textStyle="bold"  />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/arise" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/instabuttons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            </LinearLayout>

            <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
            <!-- User picture and name container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:layout_marginBottom="8dp">

                <!-- User picture -->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewUsera"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/screenshot_2024_02_16_140816"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop" />

                <!-- User's name -->
                <TextView
                    android:id="@+id/textViewUserNamea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user6"
                    android:textSize="16sp"
                    android:textStyle="bold"  />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView33a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/gate" />

            <ImageView
                android:id="@+id/imageView32a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/instabuttons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
